--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Logic Runner | Enhanced Logic Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Logic Runner | Propositional Logic Game</title>
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
   <div class="bg-animated"></div>
 
   <header class="topbar">
     <div class="topbar-left">
       <button id="hamburger" class="hamburger"><i class="fas fa-bars"></i></button>
-      <div class="logo"><i class="fas fa-brain"></i> <span class="brand">Logic Runner+</span></div>
+      <div class="logo"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
     </div>
 
     <nav class="topnav" id="topnav">
@@ -33,18 +35,23 @@
   <main class="container">
     <section id="home" class="panel active-panel">
       <div class="hero" id="hero-section">
+
         <div class="hero-left">
-          <h1 class="shimmer">Logic Runner+</h1>
-          <p class="subtitle">A cleaner, faster, smarter way to learn propositional logic.</p>
+          <h1 class="shimmer">Logic Runner</h1>
+          <p class="subtitle">Master propositional logic through interactive gameplay.</p>
 
           <div class="topic-info">
             <div class="topic-title"><i class="fas fa-lightbulb"></i> Quick Concept</div>
-            <p>Identify truth-values, connectives, and logical forms. Practice with real-time logic puzzles and refined visual feedback.</p>
+            <p>Explore AND, OR, NOT, IMPLIES, and more through dynamic puzzle interaction.</p>
           </div>
 
           <div class="hero-cta">
-            <button id="quick-start" class="btn btn-primary"><i class="fas fa-play"></i> Play</button>
-            <button id="quick-tutorial" class="btn btn-secondary"><i class="fas fa-book"></i> Tutorial</button>
+            <button id="quick-start" class="btn btn-primary">
+              <i class="fas fa-play"></i> Start
+            </button>
+            <button id="quick-tutorial" class="btn btn-secondary">
+              <i class="fas fa-book"></i> Tutorial
+            </button>
           </div>
         </div>
 
@@ -69,7 +76,7 @@
               </div>
             </div>
 
-            <button id="start-game" class="btn btn-primary" style="margin-top:10px; width:100%;">Start Game</button>
+            <button id="start-game" class="btn btn-primary" style="width:100%; margin-top:14px;">Start Game</button>
           </div>
         </aside>
       </div>
@@ -79,150 +86,46 @@
 
     <section id="tutorial-panel" class="panel">
       <div class="card">
-        <div class="card-title"><i class="fas fa-book"></i> How the Game Works</div>
-        <p>You’ll answer three types of logic puzzles: symbol matching, statement building, and truth tables.</p>
+        <div class="card-title"><i class="fas fa-book"></i> Tutorial</div>
+        <p>Learn how logical operators behave: AND, OR, NOT, IMPLIES, XOR and more.</p>
 
-        <ul>
-          <li>Drag operators to symbols</li>
-          <li>Build statements correctly</li>
-          <li>Fill truth table outputs</li>
+        <ul class="tutorial-list">
+          <li>Match symbols to their operator names.</li>
+          <li>Build statements by dragging the correct operator.</li>
+          <li>Complete truth tables by evaluating logic outcomes.</li>
         </ul>
       </div>
     </section>
 
     <section id="about-panel" class="panel">
-      <div class="card">
+      <div class="card about-card">
         <div class="card-title"><i class="fas fa-users"></i> About This Project</div>
-        <p>Created by Group 3 Block 2N (BSIT). Enhanced UI, polish, animations and gameplay improvements added.</p>
+        <p>Created as an educational logic game with interactive challenges.</p>
       </div>
     </section>
 
     <section id="leaderboard-panel" class="panel">
       <div class="card">
         <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard</div>
-        <input id="player-name" placeholder="Your name" class="name-input" />
+        <input id="player-name" class="name-input" placeholder="Your name" />
         <button id="clear-leader" class="btn btn-secondary">Clear</button>
         <ol id="leader-list"></ol>
       </div>
     </section>
   </main>
 
-  <div id="floating-ui" class="floating-ui"></div>
-
-  <script src="game.js"></script>
-  <script src="ui.js"></script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Logic Runner | Enhanced Logic Game</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
-  <div class="bg-animated"></div>
-
-  <header class="topbar">
-    <div class="topbar-left">
-      <button id="hamburger" class="hamburger"><i class="fas fa-bars"></i></button>
-      <div class="logo"><i class="fas fa-brain"></i> <span class="brand">Logic Runner+</span></div>
+  <div id="floating-ui" class="floating-ui">
+    <div class="floating-top">
+      <div class="status-indicator"><i class="fas fa-layer-group"></i> <span id="stat-level"></span></div>
+      <div class="status-indicator"><i class="fas fa-star"></i> <span id="stat-score"></span></div>
+      <div class="status-indicator"><i class="fas fa-heart"></i> <span id="stat-lives"></span></div>
+      <div class="status-indicator" id="floating-timer"><i class="fas fa-stopwatch"></i> <span id="timer-value"></span>s</div>
     </div>
-
-    <nav class="topnav" id="topnav">
-      <button class="nav-link active" data-target="home">Play</button>
-      <button class="nav-link" data-target="tutorial-panel">Tutorial</button>
-      <button class="nav-link" data-target="about-panel">About</button>
-      <button class="nav-link" data-target="leaderboard-panel">Leaderboard</button>
-      <div class="nav-underline"></div>
-    </nav>
-
-    <div class="topbar-right">
-      <button id="sound-toggle" class="icon-btn"><i class="fas fa-volume-up"></i></button>
-      <button id="open-leaderboard" class="icon-btn"><i class="fas fa-trophy"></i></button>
+    <div class="floating-actions">
+      <button id="btn-retry" class="btn floating-btn"><i class="fas fa-redo"></i></button>
+      <button id="btn-quit" class="btn floating-btn"><i class="fas fa-sign-out-alt"></i></button>
     </div>
-  </header>
-
-  <main class="container">
-    <section id="home" class="panel active-panel">
-      <div class="hero" id="hero-section">
-        <div class="hero-left">
-          <h1 class="shimmer">Logic Runner+</h1>
-          <p class="subtitle">A cleaner, faster, smarter way to learn propositional logic.</p>
-
-          <div class="topic-info">
-            <div class="topic-title"><i class="fas fa-lightbulb"></i> Quick Concept</div>
-            <p>Identify truth-values, connectives, and logical forms. Practice with real-time logic puzzles and refined visual feedback.</p>
-          </div>
-
-          <div class="hero-cta">
-            <button id="quick-start" class="btn btn-primary"><i class="fas fa-play"></i> Play</button>
-            <button id="quick-tutorial" class="btn btn-secondary"><i class="fas fa-book"></i> Tutorial</button>
-          </div>
-        </div>
-
-        <aside class="hero-right">
-          <div class="card" id="settings-card">
-            <div class="card-title"><i class="fas fa-sliders-h"></i> Game Settings</div>
-
-            <div class="settings-row">
-              <div class="settings-label">Difficulty</div>
-              <div class="settings-choices" id="difficulty-select">
-                <div class="settings-card active" data-value="easy">Beginner</div>
-                <div class="settings-card" data-value="medium">Intermediate</div>
-                <div class="settings-card" data-value="hard">Expert</div>
-              </div>
-            </div>
-
-            <div class="settings-row">
-              <div class="settings-label">Mode</div>
-              <div class="settings-choices" id="mode-select">
-                <div class="settings-card active" data-value="classic">Classic</div>
-                <div class="settings-card" data-value="timed">Timed</div>
-              </div>
-            </div>
-
-            <button id="start-game" class="btn btn-primary" style="margin-top:10px; width:100%;">Start Game</button>
-          </div>
-        </aside>
-      </div>
-
-      <section id="game-area" class="game-area"></section>
-    </section>
-
-    <section id="tutorial-panel" class="panel">
-      <div class="card">
-        <div class="card-title"><i class="fas fa-book"></i> How the Game Works</div>
-        <p>You’ll answer three types of logic puzzles: symbol matching, statement building, and truth tables.</p>
-
-        <ul>
-          <li>Drag operators to symbols</li>
-          <li>Build statements correctly</li>
-          <li>Fill truth table outputs</li>
-        </ul>
-      </div>
-    </section>
-
-    <section id="about-panel" class="panel">
-      <div class="card">
-        <div class="card-title"><i class="fas fa-users"></i> About This Project</div>
-        <p>Created by Group 3 Block 2N (BSIT). Enhanced UI, polish, animations and gameplay improvements added.</p>
-      </div>
-    </section>
-
-    <section id="leaderboard-panel" class="panel">
-      <div class="card">
-        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard</div>
-        <input id="player-name" placeholder="Your name" class="name-input" />
-        <button id="clear-leader" class="btn btn-secondary">Clear</button>
-        <ol id="leader-list"></ol>
-      </div>
-    </section>
-  </main>
-
-  <div id="floating-ui" class="floating-ui"></div>
+  </div>
 
   <script src="game.js"></script>
   <script src="ui.js"></script>
