--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+  <!-- Animated Background -->
   <div class="bg-animated"></div>
 
+  <!-- NAVIGATION -->
   <header class="topbar">
     <div class="topbar-left">
       <button id="hamburger" class="hamburger"><i class="fas fa-bars"></i></button>
@@ -33,6 +35,7 @@
   </header>
 
   <main class="container">
+    <!-- HOME / PLAY -->
     <section id="home" class="panel active-panel">
       <div class="hero" id="hero-section">
 
@@ -84,6 +87,7 @@
       <section id="game-area" class="game-area"></section>
     </section>
 
+    <!-- TUTORIAL -->
     <section id="tutorial-panel" class="panel">
       <div class="card">
         <div class="card-title"><i class="fas fa-book"></i> Tutorial</div>
@@ -97,6 +101,7 @@
       </div>
     </section>
 
+    <!-- ABOUT -->
     <section id="about-panel" class="panel">
       <div class="card about-card">
         <div class="card-title"><i class="fas fa-users"></i> About This Project</div>
@@ -104,6 +109,7 @@
       </div>
     </section>
 
+    <!-- LEADERBOARD -->
     <section id="leaderboard-panel" class="panel">
       <div class="card">
         <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard</div>
@@ -114,6 +120,7 @@
     </section>
   </main>
 
+  <!-- Floating UI -->
   <div id="floating-ui" class="floating-ui">
     <div class="floating-top">
       <div class="status-indicator"><i class="fas fa-layer-group"></i> <span id="stat-level"></span></div>
