--- a/index.html
+++ b/index.html
@@ -1,55 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Logic Runner</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Logic Runner | Propositional Logic Game</title>
+
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-<header class="topbar">
-  <div class="topbar-left">
-    <button id="hamburger" class="hamburger">☰</button>
-    <div class="logo">Logic Runner</div>
+  <div class="bg-animated" aria-hidden="true"></div>
+
+  <header class="topbar" role="banner">
+    <div class="topbar-left">
+      <button id="hamburger" class="hamburger" aria-label="Open menu" type="button"><i class="fas fa-bars"></i></button>
+      <div class="logo" aria-hidden="false"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
+    </div>
+
+    <nav class="topnav" id="topnav" aria-label="Main navigation">
+      <button class="nav-link active" data-target="home" type="button">Play</button>
+      <button class="nav-link" data-target="tutorial-panel" type="button">Tutorial</button>
+      <button class="nav-link" data-target="about-panel" type="button">About</button>
+      <button class="nav-link" data-target="leaderboard-panel" type="button">Leaderboard</button>
+      <div class="nav-underline" aria-hidden="true"></div>
+    </nav>
+
+    <div class="topbar-right">
+      <button id="sound-toggle" class="icon-btn" title="Toggle sound" type="button"><i class="fas fa-volume-up"></i></button>
+      <button id="open-leaderboard" class="icon-btn" title="Leaderboard" type="button"><i class="fas fa-trophy"></i></button>
+    </div>
+  </header>
+
+  <main class="container" id="main-container">
+    <!-- HOME / PLAY -->
+    <section id="home" class="panel active-panel" aria-label="Home">
+      <div class="hero" id="hero-section">
+        <div class="hero-left">
+          <h1 class="shimmer">Logic Runner</h1>
+          <p class="subtitle">Test your wits and master propositional logic through gameplay.</p>
+
+          <div class="topic-info" aria-hidden="false">
+            <div class="topic-title"><i class="fas fa-lightbulb"></i> Propositional Logic — Quick idea</div>
+            <p>Propositional logic deals with statements that are either true or false. Practice using connectives like AND, OR, NOT, IMPLIES and XOR through short interactive challenges.</p>
+          </div>
+
+          <!-- Big Cards layout (two by two) -->
+          <div class="menu-cards" id="menu-cards">
+            <div class="big-card-row">
+              <button class="big-card" data-target="play" id="card-play" type="button">
+                <div class="card-icon-wrap"><i class="fas fa-play card-icon"></i></div>
+                <div class="card-body"><span class="card-title">PLAY</span><small>Jump into a randomized run</small></div>
+              </button>
+
+              <button class="big-card" data-target="tutorial-panel" id="card-tut" type="button">
+                <div class="card-icon-wrap"><i class="fas fa-book card-icon"></i></div>
+                <div class="card-body"><span class="card-title">TUTORIAL</span><small>Modes, rules & tips</small></div>
+              </button>
+            </div>
+
+            <div class="big-card-row">
+              <button class="big-card" data-target="about-panel" id="card-about" type="button">
+                <div class="card-icon-wrap"><i class="fas fa-users card-icon"></i></div>
+                <div class="card-body"><span class="card-title">ABOUT</span><small>What the game teaches</small></div>
+              </button>
+
+              <button class="big-card" data-target="leaderboard-panel" id="card-leader" type="button">
+                <div class="card-icon-wrap"><i class="fas fa-trophy card-icon"></i></div>
+                <div class="card-body"><span class="card-title">LEADERBOARD</span><small>Top local runs</small></div>
+              </button>
+            </div>
+          </div>
+
+          <div class="meta-row">
+            <span class="meta-pill">Modern</span>
+            <span class="meta-pill">Minimal</span>
+            <span class="meta-pill">Fun</span>
+          </div>
+        </div>
+
+        <aside class="hero-right">
+          <div class="card" id="settings-card">
+            <div class="card-title"><i class="fas fa-sliders-h"></i> GAME SETTINGS</div>
+            <div class="settings-row">
+              <div class="settings-label">DIFFICULTY</div>
+              <div class="settings-choices" id="difficulty-select">
+                <div class="settings-card active" data-value="easy" role="button" tabindex="0">Beginner</div>
+                <div class="settings-card" data-value="medium" role="button" tabindex="0">Intermediate</div>
+                <div class="settings-card" data-value="hard" role="button" tabindex="0">Expert</div>
+              </div>
+            </div>
+
+            <div class="settings-row">
+              <div class="settings-label">MODE</div>
+              <div class="settings-choices" id="mode-select">
+                <div class="settings-card active" data-value="classic" role="button" tabindex="0">Classic</div>
+                <div class="settings-card" data-value="timed" role="button" tabindex="0">Timed</div>
+              </div>
+            </div>
+
+            <div style="margin-top:12px;">
+              <button id="start-game" class="btn btn-primary" type="button">Start Game</button>
+            </div>
+          </div>
+
+          <div class="card small-card" id="help-card">
+            <div class="card-title"><i class="fas fa-info-circle"></i> Quick Tips</div>
+            <ol class="tips">
+              <li>Drag operator names to symbols, or answer prompts when shown.</li>
+              <li>Timed mode starts when you press Start. Timer will appear in-game only.</li>
+              <li>Use Retry/Quit while playing to control runs.</li>
+            </ol>
+          </div>
+        </aside>
+      </div>
+
+      <section id="game-area" class="game-area" aria-live="polite"></section>
+    </section>
+
+    <!-- TUTORIAL -->
+    <section id="tutorial-panel" class="panel">
+      <div class="card">
+        <div class="card-title"><i class="fas fa-book"></i> Tutorial</div>
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-project-diagram"></i> Connectors & Semantics</div>
+          <p><strong>AND (∧)</strong> — true only when both p and q are true.<br>
+             <strong>OR (∨)</strong> — true when at least one of p or q is true.<br>
+             <strong>NOT (¬)</strong> — inverts truth.<br>
+             <strong>IMPLIES (→)</strong> — false only when p is true and q is false.<br>
+             <strong>XOR (⊕)</strong> — true when exactly one of p or q is true.</p>
+        </div>
+
+        <h3>How to Play</h3>
+        <ol class="tutorial-list">
+          <li>Choose difficulty and mode, then press Start.</li>
+          <li>Question types: symbol match, sentence fill, truth-table tasks (drag / mcq / type / dropdown / partial).</li>
+          <li>Correct answers increase score. Wrong answers lose a life. Run ends at 0 lives.</li>
+          <li>In Timed mode, each question has a countdown — answer before time runs out.</li>
+        </ol>
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section id="about-panel" class="panel">
+      <div class="card about-card">
+        <div class="card-title"><i class="fas fa-users"></i> About</div>
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-graduation-cap"></i> Learning Goals</div>
+          <p>Logic Runner is a practice tool to build fluency in propositional logic: translating sentences into logical operators, reading truth tables, and applying logical reasoning under mild time pressure.</p>
+        </div>
+        <p>Designed for students. Use it often and the patterns will stick.</p>
+      </div>
+    </section>
+
+    <!-- LEADERBOARD -->
+    <section id="leaderboard-panel" class="panel">
+      <div class="card">
+        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard (local)</div>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-clipboard-list"></i> Tip of the Round</div>
+          <p id="topic-tip">Practice negation and small subexpressions — simplify step-by-step.</p>
+        </div>
+
+        <div style="display:flex;gap:.5rem;align-items:center;margin-bottom:8px;">
+          <input id="player-name" placeholder="Your name" class="name-input" />
+          <button id="clear-leader" class="btn btn-secondary" type="button">Clear</button>
+        </div>
+
+        <ol id="leader-list" aria-live="polite"></ol>
+      </div>
+    </section>
+  </main>
+
+  <!-- Floating HUD (top-right, shown only in-game) -->
+  <div id="floating-ui" class="floating-ui" aria-hidden="true" style="display:none;">
+    <div class="floating-top">
+      <div class="status-indicator" title="Level"><i class="fas fa-layer-group"></i> <span id="stat-level">0/0</span></div>
+      <div class="status-indicator" title="Score"><i class="fas fa-star"></i> <span id="stat-score">0</span></div>
+      <div class="status-indicator" title="Lives"><i class="fas fa-heart"></i> <span id="stat-lives">3</span></div>
+      <div id="floating-timer" class="status-indicator" style="display:none;" title="Timer"><i class="fas fa-stopwatch"></i> <span id="timer-value">0</span>s</div>
+    </div>
+    <div class="floating-actions">
+      <button id="btn-retry" class="btn floating-btn" title="Retry" type="button"><i class="fas fa-redo"></i> Retry</button>
+      <button id="btn-quit" class="btn floating-btn" title="Quit" type="button"><i class="fas fa-sign-out-alt"></i> Quit</button>
+    </div>
   </div>
-  <nav class="topnav">
-    <button data-target="play">Play</button>
-    <button data-target="tutorial">Tutorial</button>
-    <button data-target="about">About</button>
-    <button data-target="leaderboard">Leaderboard</button>
-  </nav>
-</header>
 
-<main>
-  <section id="menu-cards" class="cards">
-    <div class="card navcard" data-target="play">Play</div>
-    <div class="card navcard" data-target="tutorial">Tutorial</div>
-    <div class="card navcard" data-target="about">About</div>
-    <div class="card navcard" data-target="leaderboard">Leaderboard</div>
-  </section>
-
-  <section id="play" class="panel hidden">
-    <h2>Game</h2>
-    <button id="start-game">Start Game</button>
-    <div id="game-area"></div>
-  </section>
-
-  <section id="tutorial" class="panel hidden">
-    <h2>Tutorial</h2>
-    <p>Learn propositional logic with examples.</p>
-  </section>
-
-  <section id="about" class="panel hidden">
-    <h2>About</h2>
-    <p>Logic Runner helps practice propositional logic.</p>
-  </section>
-
-  <section id="leaderboard" class="panel hidden">
-    <h2>Leaderboard</h2>
-    <ol id="leader-list"></ol>
-  </section>
-</main>
-
-<script src="game.js"></script>
+  <script src="game.js"></script>
 </body>
 </html>
